fixed navbar visibility in mobile screen

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -6,7 +6,7 @@
   position: fixed;
   top: 0;
   z-index: 20;
-  opacity: 0.93;
+  opacity: 0.97;
 }
 
 .navbarContentsContainer {
